# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["pyo3-pkg"]

[workspace.metadata.raze]
workspace_path = "//cargo"
gen_workspace_prefix = "cargo"
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true
render_package_aliases = false
targets = [
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
]
