# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["pyo3-pkg"]

[workspace.metadata.raze]
default_gen_buildrs = true
experimental_api = true
gen_workspace_prefix = "pyo3_pkg"
genmode = "Remote"
targets = [
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
]
workspace_path = "//thirdparty/cargo"
package_aliases_dir = "cargo"

[workspace.metadata.raze.crates.clap.'*']
compile_data_attr = "glob([\"**/*.md\"])"
