load("@rules_rust//bindgen:bindgen.bzl", "rust_bindgen_library")
load("//thirdparty/cargo:crates.bzl", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@bazel_skylib//lib:selects.bzl", "selects")

rust_bindgen_library(
    name = "golib_binding",
    cc_lib = "//pyo3-pkg/go/golib:golib.a",
    header = "//pyo3-pkg/go/golib:golib.h",
    rustfmt = False,
)

rust_shared_library(
    name = "pyo3-pkg",
    srcs = glob(["src/**/*.rs"]),
    rustc_flags = selects.with_or({
        (
            "@rules_rust//rust/platform:x86_64-apple-darwin",
            "@rules_rust//rust/platform:aarch64-apple-darwin",
        ): [
            "-Clink-arg=-undefined",
            "-Clink-arg=dynamic_lookup",
            "-lframework=CoreFoundation",
            "-lframework=Security",
        ],
        "//conditions:default": [],
    }),
    visibility = [
        "//visibility:public",
    ],
    deps = crate_deps([
        "pyo3",
    ]) + [
        ":golib_binding",
    ],
)
