[package]
edition = "2021"
name = "pyo3-pkg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.17.1", features = ["extension-module"]}

[lib]
name = "pyo3_pkg"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.60.1"
