[tool.poetry]
authors = []
description = ""
name = "python"
version = "0.1.0"

packages = [
  {include = "pythonlib", from = "../pythonlib"},
  {include = "pyo3_pkg", from = "../pyo3-pkg"},
]

[tool.poetry.dependencies]
numpy = "^1.23.2"
python = "~3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
