[tool.poetry]
authors = []
description = ""
name = "python"
version = "0.1.0"

packages = [
  {include = "pythonlib", from = "../pythonlib"},
  {include = "pyo3_pkg", from = "../pyo3-pkg"},
]

[tool.poetry.dependencies]
numpy = "^1.23.2"
python = "~3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.3"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 110
multi_line_output = 3
use_parentheses = true
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
