load("@pip//:requirements.bzl", "requirement")
load("//python:linter.bzl", "black_lint")

py_test(
    name = "pytest",
    srcs = glob(["tests/**/*.py"]),
    # Avoid package name conflict with the below issue, must specify `legacy_create_init` to `False`
    # https://github.com/bazelbuild/bazel/issues/7386
    legacy_create_init = False,
    main = "tests/run_pytest.py",
    deps = [
        "//pythonlib/pythonlib",
        requirement("pytest"),
    ],
)

black_lint(
    name = "lint",
    srcs = glob([
        "pythonlib/**/*.py",
        "tests/**/*.py",
    ]),
    legacy_create_init = False,
)
