load("@rules_python//python:defs.bzl", "py_library")
load(":pythonlib.bzl", "symlink_pythonlib")

symlink_pythonlib(
    name = "pyo3_pkg_symlink",
    src = "//pyo3-pkg",
    pkg_name = "pyo3_pkg",
)

filegroup(
    name = "pyo3_pkg.a",
    srcs = [
        ":pyo3_pkg_symlink",
    ],
)

py_library(
    name = "pyo3_pkg",
    srcs = glob(["**/*.py"]),
    data = [
        ":pyo3_pkg.a",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

# for wheel packaging to include archive files
filegroup(
    name = "pyo3_pkg_data",
    srcs = [
        ":pyo3_pkg",
        ":pyo3_pkg.a",
    ],
    visibility = ["//visibility:public"],
)
